2009-01-07  Helmut Eller  <heller@common-lisp.net>

	Fix the slime-next-location command.

	* slime.el (slime-xref-last-buffer): New variable.
	(slime-show-xrefs): Initialize it.
	(slime-goto-next-xref): Use it.
	(slime-search-property): New function.
	(slime-xref-buffer): Delted

2009-01-07  Helmut Eller  <heller@common-lisp.net>

	* swank.lisp (*sldb-pprint-dispatch-table*): Honor *print-escape*

2009-01-07  Helmut Eller  <heller@common-lisp.net>

	* swank-cmucl.lisp (frame-locals, frame-debug-vars): Remove
	non-valid variables.
	(debug-var-value): Compute the location from the frame arg.

2009-01-07  Helmut Eller  <heller@common-lisp.net>

	* swank-source-path-parser.lisp (make-source-recorder)
	(source-path-source-position): Adjust the file-position before
	entering it in the table.

2009-01-07  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-with-xref-buffer): Don't set
	slime-popup-buffer-quit-function. Use the default.  Don't shrink
	the window because it may have existed before creating the buffer
	and we need to restore it.
	(slime-goto-xref): Just use slime-popup-buffer-quit.
	(slime-edit-definition-cont): Push definition stack here so that
	we don't need to do anything special in slime-goto-xref.
	(slime-display-popup-buffer): Also save the buffer that the popup
	window was displaying before (if the window is not new).
	(slime-close-popup-window): Restore the old buffer (if any) of the
	popup window.

2009-01-07  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-show-buffer-position): Use reposition-window.

2009-01-07  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-keys): Remove the binding for C-c C-i. M-TAB
	can also be pressed with M-C-i which is probably not taken
	by the window manager.  ESC TAB would also work.  Maybe we
	should reuse C-c C-i for slime-inspect.
	Move C-c C-y to slime-repl.e.
	Remove C-c C-f: it's already on C-c C-d f.
	Remove C-c M-0: slime-restore-window-configuration doesn't exist.